--- a/ATM-Proyecto/index.html
+++ b/ATM-Proyecto/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Bank ATM</title>
+    /* Melany Estefanía Rosa González 0909-22-2253
+    Yara Aline Guzman Garcia 0909-22-1792 */
   </head>
   <body>
     <div class="container">
